--- a/hw01/pom.xml
+++ b/hw01/pom.xml
@@ -124,6 +124,9 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ru.otus.hw.Application</mainClass>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.handlers</resource>
+                                </transformer>
                             </transformers>
                         </configuration>
                     </execution>
